[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/SuppressionUtilisateur.gd" type="Script" id=2]
[ext_resource path="res://scripts/Color_MainPanel.gd" type="Script" id=3]
[ext_resource path="res://scene/ButtonExit.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/PanelContainer.gd" type="Script" id=5]

[node name="SuppressionUtilisateur" type="Node2D"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )

[node name="MainPanel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
script = ExtResource( 3 )

[node name="Infos" type="Panel" parent="PanelContainer/MainPanel"]
margin_left = 505.0
margin_top = 57.0
margin_right = 1009.0
margin_bottom = 585.0

[node name="Infos" type="Label" parent="PanelContainer/MainPanel/Infos"]
anchor_left = 0.127
anchor_top = -1.8
anchor_right = 5.2
anchor_bottom = 0.121
margin_left = -0.00800323
margin_top = 950.4
margin_right = -2300.8
margin_bottom = 0.112003
text = "Infos Utilisateurs"
align = 1
valign = 1

[node name="PanelMenu" parent="PanelContainer/MainPanel" instance=ExtResource( 1 )]
anchor_left = 0.001
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 0.056
margin_left = -0.00999999
margin_top = -0.172
margin_right = 1.0
margin_bottom = 0.183998

[node name="ButtonExit" parent="PanelContainer/MainPanel" instance=ExtResource( 4 )]

[node name="Label1" type="Label" parent="PanelContainer/MainPanel"]
anchor_left = 0.056
anchor_top = 0.097
anchor_right = 0.476
anchor_bottom = 0.206
margin_left = 0.439999
margin_top = 0.157997
margin_right = 0.23999
margin_bottom = 0.283989
text = "Suppression de Rôle
(Fonctionne pas pour les utilisateurs étant dans un groupe)"
align = 1
valign = 1

[node name="Inputs" type="Panel" parent="PanelContainer/MainPanel"]
anchor_top = 0.193
anchor_right = 0.5
anchor_bottom = 0.998
margin_left = 1.0
margin_top = -0.0979996
margin_right = -6.10352e-05
margin_bottom = 0.171997

[node name="NameUser" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.044
anchor_right = 0.984
anchor_bottom = 0.117
margin_left = -0.0640001
margin_top = -0.0680027
margin_right = 0.0639954
margin_bottom = 0.000995636

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/NameUser"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Nom Utilisateur :"
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/NameUser"]
anchor_left = 0.295
anchor_top = 0.096
anchor_right = 0.967
anchor_bottom = 0.8
margin_left = 0.0400085
margin_top = -0.3144
margin_right = 0.103973
margin_bottom = -0.619999
rect_pivot_offset = Vector2( 350, 103 )

[node name="NameRole" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.132
anchor_right = 0.984
anchor_bottom = 0.205
margin_left = -0.0640001
margin_top = -0.204002
margin_right = 0.0639954
margin_bottom = -0.13501

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/NameRole"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Nom Rôle : (useless)"
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/NameRole"]
anchor_left = 0.295
anchor_top = 0.058
anchor_right = 0.967
anchor_bottom = 0.8
margin_left = 0.0400085
margin_top = -0.00244975
margin_right = 0.103973
margin_bottom = 0.380005
rect_pivot_offset = Vector2( 350, 103 )

[node name="QueryUsed" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.111
anchor_top = 0.458
anchor_right = 1.0
anchor_bottom = 0.898
margin_left = 0.0559959
margin_top = -0.17601
margin_bottom = 0.143982

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/QueryUsed"]
anchor_left = 0.071
anchor_top = 0.077
anchor_right = 0.375
anchor_bottom = 0.231
margin_left = 0.191999
margin_top = -0.0160007
margin_right = -1.52588e-05
margin_bottom = -0.0480003
text = "Requête utilisé "
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/QueryUsed"]
anchor_left = 0.036
anchor_top = 0.308
anchor_right = 0.964
anchor_bottom = 0.923
margin_left = -0.128
margin_top = -0.064003
margin_right = 0.127991
margin_bottom = 0.0159912
readonly = true

[node name="Button" type="Button" parent="PanelContainer/MainPanel"]
margin_left = 185.0
margin_top = 281.0
margin_right = 313.0
margin_bottom = 313.0
text = "Valider"

[node name="ListUsers" type="Control" parent="PanelContainer/MainPanel"]
margin_left = 569.0
margin_top = 129.0
margin_right = 569.0
margin_bottom = 129.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MainPanel/ListUsers"]
margin_right = 256.0
margin_bottom = 416.0

[node name="NodeButton" type="VBoxContainer" parent="PanelContainer/MainPanel/ListUsers/ScrollContainer"]

[connection signal="pressed" from="PanelContainer/MainPanel/Button" to="." method="_on_Button_pressed"]
